// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inline Alert renders alert with danger severity 1`] = `
<div>
  <div
    class="flex"
  >
    <div
      class="gap-1 items-center inline-flex rounded-sm inline-alert inline-alert__danger inline-alert__transparent-background"
      data-testid="inline-alert"
      style="cursor: pointer;"
    >
      <span
        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/danger.svg');"
      />
      <span
        class="mm-box mm-icon mm-icon--size-xs mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/arrow-right.svg');"
      />
    </div>
  </div>
</div>
`;

exports[`Inline Alert renders alert with informative severity 1`] = `
<div>
  <div
    class="flex"
  >
    <div
      class="gap-1 items-center inline-flex rounded-sm inline-alert inline-alert__info inline-alert__transparent-background"
      data-testid="inline-alert"
      style="cursor: pointer;"
    >
      <span
        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/info.svg');"
      />
      <span
        class="mm-box mm-icon mm-icon--size-xs mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/arrow-right.svg');"
      />
    </div>
  </div>
</div>
`;

exports[`Inline Alert renders alert with warning severity 1`] = `
<div>
  <div
    class="flex"
  >
    <div
      class="gap-1 items-center inline-flex rounded-sm inline-alert inline-alert__warning inline-alert__transparent-background"
      data-testid="inline-alert"
      style="cursor: pointer;"
    >
      <span
        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/info.svg');"
      />
      <span
        class="mm-box mm-icon mm-icon--size-xs mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/arrow-right.svg');"
      />
    </div>
  </div>
</div>
`;
